--- a/static/css/dispatch/regularlyRoute.css
+++ b/static/css/dispatch/regularlyRoute.css
@@ -669,7 +669,7 @@ td:nth-child(8) {
 .createGroupBox {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 100%;
   height: 5.2rem;
   border-bottom: 0.1rem solid #191919;
@@ -680,7 +680,7 @@ td:nth-child(8) {
 }
 
 .createGroupBox input[type=text] {
-  width: 58rem;
+  width: 56rem;
   height: 2.5rem;
   margin-left: 2rem;
   box-sizing: border-box;
