--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -167,8 +167,7 @@
                     {% endif %}
                     {% for page in page_range %}
                     <div class="page-item {% if page == page_obj.number %} page-activate {% endif %}">
-                        <a class="page-link" href="?top_box_selector={{selector}}&search={{searched}}&page={{ page }}">{{
-                            page }}</a>
+                        <a class="page-link" href="?top_box_selector={{selector}}&search={{searched}}&page={{ page }}">{{ page }}</a>
                     </div>
                     {% endfor %}
 
