--- a/vehicle/templates/vehicle/mgmt.html
+++ b/vehicle/templates/vehicle/mgmt.html
@@ -1,1 +1,134 @@
-mgmt
+{% extends 'base.html' %}
+{% load static %}
+{% load custom_tags %}
+{% block head %}
+<meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate">
+
+<link rel="stylesheet" href="{% static 'css/vehicle/mgmt.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'css/pagination.css' %}" type="text/css" />
+{% endblock %}
+
+{% block content-header %}
+<div class="HeaderTitle">
+    차량관리
+</div>
+{% endblock %}
+
+{% block content %}
+
+
+
+
+<div class="searchAreaBox">
+    <form action="">
+        <div class="searchTool">
+            <span class="searchName">검색종류</span>
+            <div class="FilterBox">
+                <select name="select" id="" class="inputModules">
+                    <option {% if select == 'vehicle' %} selected {% endif %} value="vehicle">차량번호</option>
+                    <option {% if select == 'driver' %} selected {% endif %} value="driver">담당기사</option>
+                    <option {% if select == 'passenger' %} selected {% endif %} value="passenger">승차인원</option>
+                </select>
+                <input value="{{search}}" name="search" type="text" class="inputModules" list="hrFilter" placeholder="직원이름"
+                    autocomplete="off">
+                <datalist id="hrFilter">
+                    {% for member in member_list %}
+                    <option value="{{member.name}}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <input type="submit" value="검색" class="btnModules">
+        </div>
+    </form>
+</div>
+
+
+
+{% csrf_token %}
+
+<div class="managementContainer">
+
+    <div class="contentsAreaBox">
+        <div class="tableTitle">보험 만료예정 목록</div>
+        <table class="tableHead">
+            <thead>                
+                <tr class="headerLine insuranceTable">
+                    <td>차량번호</td>
+                    <td>담당기사</td>
+                    <td>회차</td>
+                    <td>금액</td>
+                    <td>만료일</td>
+                    <td>프린트</td>
+                </tr>
+            </thead>
+        </table>
+        <div class="tableScrollBox">
+            <table class="tableBody">
+                <tbody>
+                    {% for vehicle in insurance_list %}
+                    <tr class="insuranceTable">
+                        <td>{{vehicle.vehicle_num0}} {{vehicle.vehicle_num}}</td>
+                        <td>{{vehicle.driver_name}}</td>
+                        <td>회차</td>
+                        <td>금액</td>
+                        <td>{{vehicle.insurance_expiry_date}}</td>
+                        
+                        <td>
+                            {% with list=file_list|index:forloop.counter0 %}
+                                {% if list %} <div onclick="openViwePrint('/vehicle/list/image/{{list.id}}')">프린트</div> {% endif %}
+                            {% endwith %}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+
+
+    <div class="contentsAreaBox">
+        <div class="tableTitle">정기정검 만료예정 목록</div>
+        <table class="tableHead">
+            <thead>
+                <tr class="headerLine testTable">
+                    <td>차량번호</td>
+                    <td>담당기사</td>
+                    <td>검사유효기간</td>
+                    <td>검사만료일</td>
+                </tr>
+            </thead>
+        </table>
+
+        <div class="tableScrollBox">
+            <table class="tableBody">
+                <tbody>
+                    {% for vehicle in check_list %}
+                    <tr class="testTable">                        
+                        <td>{{vehicle.vehicle_num0}} {{vehicle.vehicle_num}}</td>
+                        <td>{{vehicle.driver}}</td>
+                        <td>{{vehicle.check_duration}} ~ {{duration|index:forloop.counter0}}</td>
+                        <td>{{expire|index:forloop.counter0}}</td>
+                    </tr>
+                    {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</div>
+
+{% endblock %}
+
+
+
+
+
+{% block script %}
+<script>
+    function openViwePrint(url){
+        window.open(url, "보험", "width=630, height=891")
+    }
+</script>
+{% endblock %}
