--- a/accounting/templates/accounting/collect.html
+++ b/accounting/templates/accounting/collect.html
@@ -1,1 +1,281 @@
-collect
+{% extends 'base.html' %}
+{% load static %}
+{% load accounting_custom_tags %}
+
+{% block head %}
+<meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate">
+
+<link rel="stylesheet" href="{% static 'css/accounting/collect.css' %}" type="text/css" />
+{% endblock %}
+
+{% block content-header %}
+<div class="HeaderTitle">
+    수금관리
+</div>
+{% endblock %}
+
+{% block content %}
+
+
+
+
+<div class="searchAreaBox">
+    <form action="">
+        <div class="searchTool">
+            <span class="searchName">날짜검색</span>
+            <div class="FilterBox">
+                <input name="month" type="month" value="{{month}}" class="inputModules">
+            </div>
+            <input type="submit" value="검색" class="btnModules">
+        </div>
+    </form>
+</div>
+
+
+
+
+<form method="post" action="{% url 'accounting:remark_edit' %}" class="salaryForm">
+    {% csrf_token %}
+    <div class="contentsAreaBox">
+        <table class="tableHead">
+            <thead>
+                <tr class="headerLine">
+                    <td>운행시간</td>
+                    <td>노선이름</td>
+                    <td>예약정보</td>
+                    <td>계약금액</td>
+                    <td>입금현황</td>
+                    <td>VAT포함</td>
+                    <td>수금구분</td>
+                    <td>수금금액</td>
+                    <td>미수금</td>
+                    <td>수금일자</td>
+                    <td>입력자</td>
+                </tr>
+            </thead>
+        </table>
+        <div class="tableScrollBox">
+            <table class="tableBody">
+                <tbody>
+                    {% for order in dispatch_list %}
+                    <tr class="{{order.id}}">
+                        <td>
+                            <div>{{departure_date|index:forloop.counter0}}</div>
+                            <div>{% if num_days|index:forloop.counter0 %} {{num_days|index:forloop.counter0}}일 {% endif %}{{time|index:forloop.counter0}}</div>
+                        </td>
+                        <td>
+                            <div>{{order.departure}} ▶ </div>
+                            <div>{{order.arrival}}</div>
+                        </td>
+                        <td>
+                            <div>{{order.customer}}</div>
+                            <div>{{order.customer_phone}}</div>
+                        </td>
+                        <td>{{order.price}}</td>
+                        <td>{{order.deposit_status}}</td>
+                        <td>{% if order.VAT == 'y' %}VAT포함{% endif %}</td>
+                        <td>{{order.collection_type}}</td>
+                        <td class="{{forloop.counter0}}">
+                            <div>{{order.collection_amount}}</div>
+                        </td>
+                        <td>{{order.price|minus:order.collection_amount}}</td>
+                        <td>{{order.collection_date}}</td>
+                        <td>{% if order.collection_creator %} {{order.collection_creator}} {% endif %}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</form>
+
+
+{% endblock %}
+
+
+
+
+{% block popup %}
+<div class="popupAreaModules">
+    <div class="popupBgModules"></div>
+    <form method="post" action="{% url 'accounting:collect_create' %}" class="popupContainer"
+        enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="PopupTitle">수금등록</div>
+        <div class="PopupDataArea">
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">수금금액</span>
+                <div class="dateBox">
+                    <input name="collection_amount" type="text" class="PopupDataInput PopupDataInputPrice">
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">수금일자</span>
+                <div class="dateBox">
+                    <input name="collection_date" type="date" class="PopupDataInput PopupDataInputDate">
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">입력자</span>
+                <div class="dateBox">
+                    <input name="collection_creator" type="text" class="PopupDataInput PopupDataInputEditer">
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">출발지</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">차량대수</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">도착지</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">차량종류</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">운행시간</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">계약현황</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">비용구분</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">참조사항</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">예약자</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">전화번호</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">계약금액</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">입금현황</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">입금 예정일</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">계산서 발행일</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">수금구분</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">상여금</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">상여금 지급방식</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <div class="PopupDataCell">
+                <span class="PopupDataTitle">VAT포함</span>
+                <div class="dateBox">
+                    <div class="PopupData"></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" class="sendToHidden">
+        </div>
+        <div class="PopupBtnBox">
+            <div class="btnModules closeBtn">닫기</div>
+            <input type="submit" class="btnModules createBtn" value="등록">
+        </div>
+    </form>
+</div>
+
+{% endblock %}
+
+
+
+
+{% block script %}
+<script>
+    let regDatas = [
+        {% for dispatch in dispatch_list %}
+          {
+            operation_type: "{{dispatch.operation_type}}",
+            references: "{{dispatch.references}}",
+            departure: "{{dispatch.departure}}",
+            arrival: "{{dispatch.arrival}}",
+            departure_date: "{{dispatch.departure_date}}",
+            arrival_date: "{{dispatch.arrival_date}}",
+            bus_type: "{{dispatch.bus_type}}",
+            bus_cnt: "{{dispatch.bus_cnt}}",
+            price: "{{dispatch.price}}",
+            driver_allowance: "{{dispatch.driver_allowance}}",
+            contract_status: "{{dispatch.contract_status}}",
+            cost_type: "{{dispatch.cost_type}}",
+            customer: "{{dispatch.customer}}",
+            customer_phone: "{{dispatch.customer_phone}}",
+            deposit_status: "{{dispatch.deposit_status}}",
+            deposit_date: "{{dispatch.deposit_date}}",
+            bill_date: "{{dispatch.bill_date}}",
+            collection_type: "{{dispatch.collection_type}}",
+            payment_method: "{{dispatch.payment_method}}",
+            VAT: "{{dispatch.VAT}}",
+            route: "{{dispatch.route}}",
+            collection_amount: "{{dispatch.collection_amount}}",
+            collection_date: "{{dispatch.collection_date}}",
+            collection_creator: "{{dispatch.collection_creator}}",
+          },
+        {% endfor %}
+    ]
+    console.log(regDatas)
+</script>
+<script src="{% static 'js/accounting/collect.js' %}"></script>
+{% endblock %}
